# molsysdbs

./: .gitignore  LICENSE  README.md  checkpoint.md  environment.yml  pyproject.toml  uniprot_P52789_fields.md
docs/: conf.py  index.rst
molsysdbs/: __init__.py  _http.py  errors.py  pdb.py  uniprot.py
tests/: test_pdb.py  test_uniprot.py
