[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molsysdbs"
version = "0.1.0"
description = "Fetch protein-related data from public databases (PDB, UniProt, and others)."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "molsysdbs contributors" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "sphinx>=7",
]

[tool.setuptools]
packages = ["molsysdbs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
